--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -197,6 +197,7 @@
     <ClCompile Include="chapter7\Pcf\ScenePcf.cpp" />
     <ClCompile Include="chapter7\ShadowMap\SceneShadowMap.cpp" />
     <ClCompile Include="chapter7\VBOMesh7.cpp" />
+    <ClCompile Include="chapter8\Decay\SceneDecay.cpp" />
     <ClCompile Include="chapter8\Noise\NoiseTex.cpp" />
     <ClCompile Include="chapter8\Noise\SceneNoiseTex.cpp" />
     <ClCompile Include="chapter8\PaintSpatter\ScenePaintSpatter.cpp" />
@@ -301,6 +302,8 @@
     <None Include="chapter7\ShadowMap\Shader\SolidShader.vert" />
     <None Include="chapter8\CloudNoise\Shader\PaintSpatterShader.frag" />
     <None Include="chapter8\CloudNoise\Shader\PaintSpatterShader.vert" />
+    <None Include="chapter8\Decay\Shader\DecayShader.frag" />
+    <None Include="chapter8\Decay\Shader\DecayShader.vert" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chapter1\GLShader.hpp" />
@@ -356,6 +359,7 @@
     <ClInclude Include="chapter7\Pcf\ScenePcf.h" />
     <ClInclude Include="chapter7\ShadowMap\SceneShadowMap.h" />
     <ClInclude Include="chapter7\VBOMesh7.h" />
+    <ClInclude Include="chapter8\Decay\SceneDecay.h" />
     <ClInclude Include="chapter8\Noise\NoiseTex.h" />
     <ClInclude Include="chapter8\Noise\SceneNoiseTex.h" />
     <ClInclude Include="chapter8\PaintSpatter\ScenePaintSpatter.h" />
