--- a/OpenGL/OpenGL.vcxproj
+++ b/OpenGL/OpenGL.vcxproj
@@ -198,6 +198,7 @@
     <ClCompile Include="chapter7\ShadowMap\SceneShadowMap.cpp" />
     <ClCompile Include="chapter7\VBOMesh7.cpp" />
     <ClCompile Include="chapter8\Decay\SceneDecay.cpp" />
+    <ClCompile Include="chapter8\NightVision\SceneNightVision.cpp" />
     <ClCompile Include="chapter8\Noise\NoiseTex.cpp" />
     <ClCompile Include="chapter8\Noise\SceneNoiseTex.cpp" />
     <ClCompile Include="chapter8\PaintSpatter\ScenePaintSpatter.cpp" />
@@ -304,6 +305,8 @@
     <None Include="chapter8\CloudNoise\Shader\PaintSpatterShader.vert" />
     <None Include="chapter8\Decay\Shader\DecayShader.frag" />
     <None Include="chapter8\Decay\Shader\DecayShader.vert" />
+    <None Include="chapter8\NightVision\Shader\NightVisionShader.frag" />
+    <None Include="chapter8\NightVision\Shader\NightVisionShader.vert" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chapter1\GLShader.hpp" />
@@ -360,6 +363,7 @@
     <ClInclude Include="chapter7\ShadowMap\SceneShadowMap.h" />
     <ClInclude Include="chapter7\VBOMesh7.h" />
     <ClInclude Include="chapter8\Decay\SceneDecay.h" />
+    <ClInclude Include="chapter8\NightVision\SceneNightVision.h" />
     <ClInclude Include="chapter8\Noise\NoiseTex.h" />
     <ClInclude Include="chapter8\Noise\SceneNoiseTex.h" />
     <ClInclude Include="chapter8\PaintSpatter\ScenePaintSpatter.h" />
