--- a/OpenGL/OpenGL.vcxproj.filters
+++ b/OpenGL/OpenGL.vcxproj.filters
@@ -295,6 +295,12 @@
     <Filter Include="ソース ファイル\chapter9\Fire\Shader">
       <UniqueIdentifier>{815c45d0-a35e-4404-96d0-d2859b498b37}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\chapter9\Smoke">
+      <UniqueIdentifier>{2a8ff34f-c7c9-4790-aa97-9bc302661cdf}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="ソース ファイル\chapter9\Smoke\Shader">
+      <UniqueIdentifier>{642b05d9-b019-4128-ad6e-b7cb8ad040ee}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="OpenGL.cpp">
@@ -485,6 +491,9 @@
     </ClCompile>
     <ClCompile Include="chapter9\Fire\SceneFire.cpp">
       <Filter>ソース ファイル\chapter9\Fire</Filter>
+    </ClCompile>
+    <ClCompile Include="chapter9\Smoke\SceneSmoke.cpp">
+      <Filter>ソース ファイル\chapter9\Smoke</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -818,6 +827,12 @@
     <None Include="chapter9\Fire\Shader\FireShader.vert">
       <Filter>ソース ファイル\chapter9\Fire\Shader</Filter>
     </None>
+    <None Include="chapter9\Smoke\Shader\SmokeShader.frag">
+      <Filter>ソース ファイル\chapter9\Smoke\Shader</Filter>
+    </None>
+    <None Include="chapter9\Smoke\Shader\SmokeShader.vert">
+      <Filter>ソース ファイル\chapter9\Smoke\Shader</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="chapter1\GLShader.hpp">
@@ -1014,6 +1029,9 @@
     </ClInclude>
     <ClInclude Include="chapter9\Fire\SceneFire.h">
       <Filter>ソース ファイル\chapter9\Fire</Filter>
+    </ClInclude>
+    <ClInclude Include="chapter9\Smoke\SceneSmoke.h">
+      <Filter>ソース ファイル\chapter9\Smoke</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
